--- a/Clase 05/actividad/src/assets/css/notFound.css
+++ b/Clase 05/actividad/src/assets/css/notFound.css
@@ -25,7 +25,7 @@ p {
   margin-bottom: 1.5rem;
 }
 
-button {
+.volver-inicio-404 {
   background-color: #3498db; 
   color: #fff; 
   padding: 0.5rem 1rem;
@@ -35,6 +35,6 @@ button {
   font-size: 1rem;
 }
 
-button:hover {
+.volver-inicio-404:hover {
   background-color: #2980b9; 
 }
